# fastapi-arch

./: .env  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
app/: lifespan.py  main.py
app/api/: __init__.py  auth.py
app/api/dependencies/: aiohttp.py  auth.py  mysql.py  redis.py
app/api/routes/: auth.py  user.py
app/core/: config.py  setting.py  token.py
app/core/database/: mysql.py  redis.py
app/database/: mysql.py  redis.py
app/decorator/: auth.py
app/domains/: base_curd.py  base_exception.py  base_schema.py  base_service.py
app/domains/auth/: const.py  curd.py  exception.py  redis_key.py  schema.py  service.py  token.py
app/domains/user/: curd.py  exception.py  schema.py  service.py
app/exception/: __init__.py  http_exception.py  message.py
app/exceptions/: http_exception.py
app/middleware/: auth.py
app/middlewares/: auth.py
app/models/: auth.py
app/schema/: auth.py  base.py
app/scripts/: gen_orm.py
app/service/: auth.py  base.py
app/utils/: gen_orm.py  parse.py
